2003-06-03  Bruno Coudoin  <bruno.coudoin@free.fr>

	* configure.in : removed gnome-common-init, added gnome-compile-warning

	
2003-06-03  Uwe Koloska <uwe@koloro.de>

	reviewed by: Bruno Coudoin

	* src/boards/hanoi.c: (hanoi_create_item): code cleanup
	* src/boards/money.c: (process_ok): code cleanup
	* src/gcompris/bonus.c: (gcompris_display_bonus): code cleanup
	* src/gcompris/gcompris-edit.c: (add_menu), (parse_doc),
	(read_xml_file), (main): code cleanup

2003-05-25  Jose JORGE  <jose.jorge@oreka.com>

	* configure.in : released version 3.1
	* boards/sounds/pt/geography/*.ogg: added all european country sounds
	* boards/submarine/asw_frigate.png: replace the war boat with a peace boat
	* boards/submarine/mine.png: replace the mine with a whale (by bruno)

2003-05-22  Bruno Coudoin  <bruno.coudoin@free.fr>

	* boards/geography/board3_0.xml.in: added reference to country sounds
	* boards/geography/board4_0.xml.in: added reference to country sounds
	* po/fr.po: updated

2003-05-22  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added cs (Czech) to ALL_LINGUAS.

2003-05-21  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/boards/python/pythontest.py: added explanation
	* src/boards/shapegame.c: (item_event_ok): added update to fix refresh

2003-05-18  Bruno Coudoin  bruno.coudoin@free.fr

	* configure.in: now release 3.0
	* gcompris.spec.in: added references to python
	* src/boards/hanoi.c: (item_event): added a canvas update
	* src/boards/python/pythontest.py: added a text presenting python
	* src/boards/shapegame.c: (item_event_ok): removed canvas update
	* src/gcompris/bar.c: (gcompris_bar_set): removed canvas update
	* src/boards/missingletter.c: fixed button.png reference to skins now

2003-05-08  Bruno Coudoin  bruno.coudoin@free.fr

	* boards/geography/board3_0.xml.in: completed properly
	* boards/geography/board4_0.xml.in: completed properly
	* boards/geography/europe/europe.jpg: completed properly