@@ -25,6 +25,10 @@
 
 * change the scale board to be more realistic and flexible.
 
+* Dynamic screen resolution change
+
+* Dynamic skin change
+
 Bug report from Marec Dirson:
 
 - dans le tableau "trains" (et sans doute ailleurs), il lui arrive
